integarted docs & added hero  and footer section

--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,13 +1,70 @@
 ---
-title: Hello World
-description: Your first document
+title: "Introduction to Algorithms"
+subtitle: "Understanding the Basics of Algorithms"
+author: "Balaji Munusamy"
+date: "2025-01-25"
 ---
 
-Welcome to the docs! You can start writing documents in `/content/docs`.
+# Introduction to Algorithms
 
-## What is Next?
+Algorithms are a fundamental concept in computer science and programming. They are step-by-step instructions or rules designed to solve specific problems or perform tasks. Whether you're sorting numbers, searching for data, or building machine learning models, algorithms are at the core of the solution.
 
-<Cards>
-  <Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
-  <Card title="Learn more about Fumadocs" href="https://fumadocs.vercel.app" />
-</Cards>
+## What is an Algorithm?
+
+An **algorithm** is a finite sequence of well-defined instructions used to perform a task or solve a problem. It is:
+
+- **Precise**: Each step is clearly defined.
+- **Finite**: It has a beginning and an end.
+- **Effective**: It achieves the desired result.
+- **Input/Output-based**: Takes inputs and produces outputs.
+
+For example, a recipe for baking a cake is an everyday analogy for an algorithm.
+
+## Why Learn Algorithms?
+
+Understanding algorithms is essential for:
+
+- **Efficient Problem-Solving**: Optimal algorithms save time and resources.
+- **Foundation of Programming**: They underpin all computer programs.
+- **Career Development**: Knowledge of algorithms is vital for technical interviews and software engineering roles.
+
+## Key Characteristics
+
+- **Correctness**: Produces the expected output for all valid inputs.
+- **Time Complexity**: Measures how fast an algorithm runs.
+- **Space Complexity**: Measures the memory required by the algorithm.
+
+## Pathfinding Algorithms
+
+Pathfinding algorithms are designed to navigate through graphs, finding the shortest path or the most efficient route between nodes. They are extensively used in:
+
+- GPS navigation systems
+- Video games
+- Robotics
+
+### Examples of Pathfinding Algorithms
+
+1. **Dijkstra's Algorithm**
+   - Finds the shortest path between nodes in a graph with non-negative edge weights.
+
+2. **A* Algorithm**
+   - Combines heuristics and path cost to find the most efficient path.
+
+3. **Breadth-First Search (BFS)**
+   - Explores all possible paths layer by layer and guarantees the shortest path in unweighted graphs.
+
+4. **Depth-First Search (DFS)**
+   - Explores as far as possible along each branch before backtracking (not optimal for shortest path).
+
+## Learn More
+
+For an in-depth understanding of pathfinding algorithms, visit the following resources:
+
+- **[Pathfinding Visualizer](https://www.pathfindingvisualizer.com/)**
+- **[Amit’s Game Programming Algorithms](http://theory.stanford.edu/~amitp/GameProgramming/)**
+- **[GeeksforGeeks Pathfinding](https://www.geeksforgeeks.org/graph-data-structure-and-algorithms/)**
+
+## Conclusion
+
+Pathfinding algorithms are critical for solving real-world navigation problems. By mastering these algorithms, you can create systems that find optimal routes, improving efficiency in a wide variety of applications.
+
