added algorithm docs

--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,70 +1,93 @@
 ---
 title: "Introduction to Algorithms"
-subtitle: "Understanding the Basics of Algorithms"
+subtitle: "Understanding the Basics and Importance of Algorithms"
 author: "Balaji Munusamy"
 date: "2025-01-25"
 ---
 
 # Introduction to Algorithms
 
-Algorithms are a fundamental concept in computer science and programming. They are step-by-step instructions or rules designed to solve specific problems or perform tasks. Whether you're sorting numbers, searching for data, or building machine learning models, algorithms are at the core of the solution.
+Algorithms are the backbone of computer science. They provide a structured, step-by-step solution to a problem or task. Whether it's in sorting, searching, or even artificial intelligence, algorithms are essential for making computers solve problems efficiently.
 
 ## What is an Algorithm?
 
-An **algorithm** is a finite sequence of well-defined instructions used to perform a task or solve a problem. It is:
+An **algorithm** is a finite, well-defined sequence of instructions that are executed to solve a problem or perform a task. More specifically, it should satisfy the following criteria:
 
-- **Precise**: Each step is clearly defined.
-- **Finite**: It has a beginning and an end.
-- **Effective**: It achieves the desired result.
-- **Input/Output-based**: Takes inputs and produces outputs.
+- **Precise**: Each step of the algorithm must be clearly and unambiguously defined.
+- **Finite**: The algorithm must have a definite stopping point. It should never run indefinitely.
+- **Effective**: Each step must be feasible, meaning the operations can be carried out effectively in a reasonable time frame.
+- **Input/Output-based**: Algorithms work by processing input and producing output. This allows them to be versatile for different kinds of tasks.
 
-For example, a recipe for baking a cake is an everyday analogy for an algorithm.
+### Example:
 
-## Why Learn Algorithms?
+Think of an algorithm like a recipe for cooking. Just as you follow each step in the recipe to create a dish, a computer follows an algorithm to process data and produce results.
 
-Understanding algorithms is essential for:
+## Why Understanding Algorithms is Essential?
 
-- **Efficient Problem-Solving**: Optimal algorithms save time and resources.
-- **Foundation of Programming**: They underpin all computer programs.
-- **Career Development**: Knowledge of algorithms is vital for technical interviews and software engineering roles.
+Grasping the concepts of algorithms is critical for several reasons:
 
-## Key Characteristics
+- **Efficiency**: Efficient algorithms can save significant time and resources, enabling systems to handle more data or perform tasks faster.
+- **Core of Programming**: Every computer program or system relies on algorithms, whether it's handling user input, processing data, or communicating with other systems.
+- **Problem-Solving**: With a solid understanding of algorithms, developers can choose the best solution for a problem, considering both time and space complexities.
+- **Career Growth**: Algorithms are a central topic in technical interviews for software engineering and data science roles. Having a good understanding is key to passing coding challenges.
 
-- **Correctness**: Produces the expected output for all valid inputs.
-- **Time Complexity**: Measures how fast an algorithm runs.
-- **Space Complexity**: Measures the memory required by the algorithm.
+## Key Characteristics of Algorithms
 
-## Pathfinding Algorithms
+When evaluating an algorithm, there are several key aspects to consider:
 
-Pathfinding algorithms are designed to navigate through graphs, finding the shortest path or the most efficient route between nodes. They are extensively used in:
+- **Correctness**: The algorithm must solve the problem as intended and produce the correct output for all valid inputs.
+- **Time Complexity**: Measures the amount of time the algorithm takes to process data. This is crucial in determining how an algorithm scales with larger inputs.
+- **Space Complexity**: Refers to the amount of memory required by the algorithm. For some problems, the memory usage can be just as important as the execution time.
+- **Scalability**: As the size of the problem increases, how well does the algorithm perform? Scalability is especially important for large datasets or systems that handle millions of users.
 
-- GPS navigation systems
-- Video games
-- Robotics
+## Types of Algorithms
 
-### Examples of Pathfinding Algorithms
+While algorithms are used for a wide range of tasks, they can generally be categorized into several types, each optimized for different kinds of problems:
 
-1. **Dijkstra's Algorithm**
-   - Finds the shortest path between nodes in a graph with non-negative edge weights.
+- **Sorting Algorithms**: Used to arrange data in a specific order (e.g., Bubble Sort, Quick Sort, Merge Sort).
+- **Searching Algorithms**: These help find specific data points in datasets (e.g., Binary Search, Linear Search).
+- **Dynamic Programming**: Breaks down problems into smaller subproblems and solves them efficiently (e.g., Fibonacci sequence, Knapsack problem).
+- **Greedy Algorithms**: Make locally optimal choices with the hope of finding a global optimum (e.g., Kruskal's or Prim's algorithm for finding a minimum spanning tree).
+- **Divide and Conquer**: Breaks down the problem into smaller, manageable parts, solves them recursively, and then combines the results (e.g., Merge Sort, Quick Sort).
 
-2. **A* Algorithm**
-   - Combines heuristics and path cost to find the most efficient path.
+## Pathfinding Algorithms: A Special Class
 
-3. **Breadth-First Search (BFS)**
-   - Explores all possible paths layer by layer and guarantees the shortest path in unweighted graphs.
+One specific class of algorithms that are widely used in navigation and decision-making systems is **pathfinding algorithms**. These algorithms help find the most efficient route or path between two points in a graph or grid. They have extensive applications in:
 
-4. **Depth-First Search (DFS)**
-   - Explores as far as possible along each branch before backtracking (not optimal for shortest path).
+- **Navigation Systems**: GPS systems use pathfinding algorithms to provide the best routes.
+- **Robotics**: Robots use pathfinding to navigate spaces and avoid obstacles.
+- **Video Games**: Game AI uses pathfinding to control character movement and interaction with the environment.
 
-## Learn More
+### Popular Pathfinding Algorithms
 
-For an in-depth understanding of pathfinding algorithms, visit the following resources:
+1. **Dijkstra’s Algorithm**: 
+   - Used to find the shortest path between two nodes in a graph with non-negative weights. Dijkstra’s algorithm is a classic example of a greedy algorithm, where the nearest node is visited first.
 
-- **[Pathfinding Visualizer](https://www.pathfindingvisualizer.com/)**
-- **[Amit’s Game Programming Algorithms](http://theory.stanford.edu/~amitp/GameProgramming/)**
-- **[GeeksforGeeks Pathfinding](https://www.geeksforgeeks.org/graph-data-structure-and-algorithms/)**
+2. **A*** **(A-Star) Algorithm**: 
+   - Combines the best of Dijkstra’s algorithm with heuristic functions to improve efficiency. A* estimates the cost of reaching the destination using a heuristic, guiding the algorithm to prioritize certain paths. It’s widely used in GPS navigation and video game AI for its speed and accuracy.
+
+3. **Breadth-First Search (BFS)**: 
+   - A search strategy that explores all nodes layer by layer. It guarantees the shortest path in unweighted graphs and is particularly useful for problems like maze-solving.
+
+4. **Depth-First Search (DFS)**: 
+   - Explores as far as possible along a branch before backtracking. While it doesn't guarantee the shortest path, DFS is useful in certain scenarios like finding all possible paths or topological sorting.
+
+## The Power of Algorithms: Real-World Applications
+
+Algorithms are not just academic concepts; they power many of the systems we use every day:
+
+- **Data Structures & Sorting**: Algorithms like Merge Sort and Quick Sort are the foundation for efficient data management in databases.
+- **Recommendation Systems**: Algorithms help suggest items based on user preferences, such as in Netflix or Amazon.
+- **Machine Learning**: Algorithms form the basis for training models to make predictions or decisions based on data.
 
 ## Conclusion
 
-Pathfinding algorithms are critical for solving real-world navigation problems. By mastering these algorithms, you can create systems that find optimal routes, improving efficiency in a wide variety of applications.
+Understanding algorithms is an essential skill for anyone involved in computer programming or software development. Algorithms are more than just abstract ideas—they are tools that drive the performance and efficiency of systems, products, and applications. By mastering key algorithms, you will be able to design systems that solve real-world problems efficiently, scale well, and provide optimal user experiences.
 
+For those seeking to deepen their knowledge of pathfinding algorithms and more, check out the following resources:
+
+- **[Pathfinding Visualizer](https://www.pathfindingvisualizer.com/)**
+- **[Amit’s Game Programming Algorithms](http://theory.stanford.edu/~amitp/GameProgramming/)**
+- **[GeeksforGeeks Pathfinding Algorithms](https://www.geeksforgeeks.org/graph-data-structure-and-algorithms/)**
+
+These resources offer interactive tools and in-depth explanations that can help you understand algorithms in both theory and practice.
